# streamlit-faker

./: README.md  fake_chart.py  fake_data_display.py  fake_input.py  fake_text.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_faker.py
.github/workflows/: pypi_action.yml
streamlit_faker/: __init__.py  chart.py  data_display.py  fake_chart.py  fake_data_display.py  fake_input.py  input.py
tests/: conftest.py  test_altex_import.py  test_chart_provider.py
